@@ -12,6 +12,10 @@
 
 2015-11-16  Ben Elliston  <bje@gnu.org>
 
+	* testsuite/runtest.all/options.exp: Re-enable --strace 1 test.
+
+2015-11-16  Ben Elliston  <bje@gnu.org>
+
 	* testsuite/runtest.all/options.exp: Remove some commented code.
 
 2015-11-16  Ben Elliston  <bje@gnu.org>
